--- a/gb/22/3/11/n13639296.md
+++ b/gb/22/3/11/n13639296.md
@@ -1,67 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/esmwkr345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>外企退出市场 俄拟没收资产</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>超330家外企退出俄国市场 俄拟没收其资产</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13639298-544628-600x400.jpg" />
-<h6>多家欧美企业宣布退出俄罗斯市场。图为3月10日，位莫斯科的麦当劳门市。（AFP）
+<h6>多家欧美企业宣布退出俄罗斯市场。图为2022年3月10日，位莫斯科的麦当劳门市。(AFP)
 </h6>
 <hr>
-<p>【大纪元2022年03月11日讯】（大纪元记者赖意晴台湾台北报导）自<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>入侵<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>后，引起多国政府实施经济制裁，国际企业也陆续响应，截至周四（3月10日），已有超过330家企业宣布退出俄国市场。对此，俄国当局传出正拟定反制计划，将<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E9%BA%A6%E5%BD%93%E5%8A%B3.md#1">麦当劳</a>（McDonald&#8217;s）、<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>（Apple）等撤出的企业资产收归国有。</p>
-<p>随着<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>持续受到国际强权孤立，根据耶鲁大学管理学院的追踪数据，自俄国入侵<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>后，到周四为止，已有超过330家企业宣布退出俄国市场。</p>
+<p>【大纪元2022年03月11日讯】（大纪元记者赖意晴台湾台北报导）自<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>入侵<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>后，引起多国政府实施经济制裁，国际企业也陆续响应，截至周四（3月10日），已有超过330家企业宣布退出俄国市场。对此，俄国当局传出正拟定反制计划，将<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BA%A6%E5%BD%93%E5%8A%B3.md#1">麦当劳</a>（McDonald&#8217;s）、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>（Apple）等撤出的企业资产收归国有。</p>
+<p>随着<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>持续受到国际强权孤立，根据耶鲁大学管理学院的追踪数据，自俄国入侵<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>后，到周四为止，已有超过330家企业宣布退出俄国市场。</p>
 <p>俄罗斯外长拉夫罗夫（Sergei Lavrov）周四告诉美国财经频道CNBC，俄罗斯能够自行处理好国内经济。他表示，俄国过去也应付过经济被孤立的艰难时期，“关于我们的经济问题，我们会把它解决的。”拉夫罗夫说，西方进行的制裁明显与其民主价值背道而驰，并称这是又一个西方国家不值得信赖的事例。</p>
-<p>拉夫罗夫与乌克兰外长库列巴（Dmytro Kuleba）周四在土耳其进行会谈，但并未就停火获致任何进展。</p>
+<p>拉夫罗夫与乌克兰外长库列巴（Dmytro Kuleba）周四在土耳其进行会谈，但并未就停火取得任何进展。</p>
 <p>根据美国有线电视新闻网（CNN）报导，俄罗斯总统普京（Vladimir Putin）周四向政府官员表示，克里姆林宫正在拟定可行的法律手段，以便掌握撤出的国际企业。普亭说，政府会先对这些企业引入外部管理层，接着把经营权转移给有意愿者，强调“有足够的法源依据和市场工具可以执行”。</p>
-<p>俄国大众消费倡议组织主席帕夫洛夫（Oleg Pavlov）表示，因在俄国停止经营而被列入国有化考量的企业名单，已送交政府和检察总长办公室，“目前有59家企业被列入，后续会依照<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%A4%96%E5%9B%BD%E4%BC%81%E4%B8%9A.md#1">外国企业</a>的态度扩大。”名单包括<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E9%BA%A6%E5%BD%93%E5%8A%B3.md#1">麦当劳</a>、<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>、微软、H&amp;M、国际商业机器公司（IBM）及丰田（Toyota）等企业。</p>
+<p>俄国大众消费倡议组织主席帕夫洛夫（Oleg Pavlov）表示，因在俄国停止经营而被列入国有化考量的企业名单，已送交政府和检察总长办公室，“目前有59家企业被列入，后续会依照<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%96%E5%9B%BD%E4%BC%81%E4%B8%9A.md#1">外国企业</a>的态度扩大”。名单包括<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BA%A6%E5%BD%93%E5%8A%B3.md#1">麦当劳</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>、微软、H&amp;M、国际商业机器公司（IBM）及丰田（Toyota）等企业。</p>
 <h2>俄最大航运商77艘油轮海上漂</h2>
 <p>美国及英国已在周二（3月8日）宣布对俄国加码制裁，瞄准俄国经济命脉，禁止俄国能源进口，而在西方国家宣布能源制裁前，国际买家早已犹豫是否要接受俄国原油。</p>
-<p>根据英国《金融时报》3月7日报导，海上情报公司 Windward 数据指出，俄国最大航运商Sovcomflot上周有77艘船在海上漂流，目前尚不清楚买家是否会愿意接货。例如一艘名为NS Champion的船只原定要停靠在苏格兰的奥克尼（Orkney），但被拒于门外，最后传出开往丹麦。分析师预计，未来会有更多俄罗斯油轮被迫改道。◇</p>
-<p>责任编辑：陈玟绮</p>
+<p>根据英国《金融时报》3月7日报导，海上情报公司Windward数据指出，俄国最大航运商Sovcomflot上周有77艘船在海上漂流，目前尚不清楚买家是否会愿意接货。</p>
+<p>例如一艘名为NS Champion的船只原定要停靠在苏格兰的奥克尼（Orkney），但被拒于门外，最后传出开往丹麦。分析师预计，未来会有更多俄罗斯油轮被迫改道。◇</p>
+<p>责任编辑：陈玟绮#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/21/11/20/n13388241.md#1">中共对澳经济制裁失败 更激发澳洲抗共决心</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/1/24/n13525062.md#1">美退役上将：北京犯台 美可经济制裁 助台自卫</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/23/n13599160.md#1">美经济制裁俄罗斯 传台湾将加入</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/23/n13599649.md#1">加拿大宣布具体措施 对俄祭出首轮经济制裁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/25/n13604718.md#1">台谴责军事行动 总统府：台湾参与对俄经济制裁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13626207.md#1">吴明德：国际经济制裁俄 恐致俄罗斯权贵内乱</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/11/n13639290.md#1">乌中西部2城 首遭俄军攻击</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/11/n13639178.md#1">乌俄战争 东欧学者：这是价值文化之争</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13636063.md#1">美能源部长忧能源危机恶化 吁油气业者增产</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13636918.md#1">政治素人尹锡悦 当选韩国总统</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/20/n13388241.md#1">中共对澳经济制裁失败 更激发澳洲抗共决心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/24/n13525062.md#1">美退役上将：北京犯台 美可经济制裁 助台自卫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/23/n13599160.md#1">美经济制裁俄罗斯 传台湾将加入</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/23/n13599649.md#1">加拿大宣布具体措施 对俄祭出首轮经济制裁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/25/n13604718.md#1">台谴责军事行动 总统府：台湾参与对俄经济制裁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13626207.md#1">吴明德：国际经济制裁俄 恐致俄罗斯权贵内乱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678771.md#1">俄乌最新谈判将于土耳其登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672730.md#1">乌炸毁俄指标性登陆舰 美：俄导弹故障率60%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672786.md#1">不只冲击粮食供应 俄乌战争恐致社会动荡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672599.md#1">邀乌总统国会演说？ 矢板明夫：台湾不必刷存在感</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637209.md#1">【财商天下】制裁不断加码 中共救不了俄罗斯</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637763.md#1">【横河观点】韩国大选另类输者 俄侵乌中共失算</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637288.md#1">专访吴国光：俄乌战局 习与权势集团分裂</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13629102.md#1">俄政府内被爆“末日恐慌”忧战败及经济崩盘</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13632875.md#1">英男咖啡因中毒身亡 摄取量相当于200杯咖啡</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631361.md#1">【一线采访】疑打疫苗后患白血病 中共严控消息</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631331.md#1">首位艺人从军阵亡 乌国33岁男星最后身影曝光</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630730.md#1">朱芯仪36岁生日宣布得乳癌 曝病况泪谢丈夫陪伴</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13628592.md#1">燕麦：健康、被低估的超级食品</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/11/n13639296.htm">外企退出市场 俄拟没收资产</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/11/n13639296.htm">超330家外企退出俄国市场 俄拟没收其资产</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/esmwkr345/djy/blob/master/gb/22/3/11/n13639296.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/11/n13639296.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
